Minor modification to reduce memory pressure for the huge glove.42B.300d data set